FIX: Font too large on dash tile headings; should use the default

--- a/css/global.css
+++ b/css/global.css
@@ -359,7 +359,7 @@ button[type="submit"] { font-size: 1em; }
 /*Home styling */
 .HomePanel {margin:0px 15px 15px 0px;width: 250px;float: left;} 
 .HomePanelIN {padding: 15px;min-height: 150px;}
-.HomePanel h2 {font-size: 1.8em;padding-left: 42px;display:block;margin: 5px 0px;}
+.HomePanel h2 {padding-left: 42px;display:block;margin: 5px 0px;}
 .HomePanel p {margin: 0; padding: 5px 0 4px 0;}
 .HomePicturePanel {    margin:0px 15px 10px 0px;float: left;width: 517px;}
 .HomePicturePanelIN img {width:517px; height:350px;}
